--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         </div>
     </div>
 
+
+    <form name = "testData" id="testDataForm">
+        <label for="season">Season</label>
+        <input type="text" name="season" id="season">
+
+        <label for="name">Name</label>
+        <input type="text" name="round" id="last-name">
+
+        <button type="submit" id="submitButton">Submit</button>
     </form>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
