--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <label for="season">Season</label>
         <input type="text" name="season" id="season">
 
-        <label for="name">Name</label>
-        <input type="text" name="round" id="last-name">
+        <label for="round">Round</label>
+        <input type="text" name="round" id="round>
 
         <button type="submit" id="submitButton">Submit</button>
     </form>
